# APMP

./: .gitignore  .gitmodules  README.md  submodule_by_file.sh
dependencies/xslam_cv_cameras/: CMakeLists.txt  package.xml
dependencies/xslam_cv_common/: CMakeLists.txt  package.xml
dependencies/xslam_cv_common/cmake/: export_flags.cmake
g2o_types/: CMakeLists.txt  package.xml
g2o_types/include/xslam/g2o_types/: g2o_registration.h  g2o_types.h  g2o_visual_types.h
g2o_types/src/: g2o_registration.cc  g2o_visual_types.cc
xslam/: CMakeLists.txt  package.xml
xslam/script/: convert_model  run_apmp.sh  utils.sh
xslam_common/: CMakeLists.txt  config.h.in  package.xml
xslam_common/include/xslam/common/: arg.h  common.h  cv_helper.h  distances-impl.hpp  distances.h  eigen_stl_types.h  eigen_types.h  frame-lidar.h  frame.h  inertial_frame.h  logging.h  math.h  nanoflann.hpp  pose_graph.h  timing.h
xslam_common/src/: cv_helper.cc  frame.cc  math.cc  timing.cc
xslam_visual_features/: CMakeLists.txt  package.xml
xslam_visual_features/include/xslam/visual-features/: feature-factory.h  global-feature.h  image_enhancement_worker.h  local-feature.h  netvlad-jit.h  superpoint-jit.h  superpoint-tensorrt.h  superpoint.h  torch-helper.h
xslam_visual_features/nodes/: convert-models.cc  timing-models.cc
xslam_visual_features/src/: feature-factory.cc  image_enhancement_worker.cc  netvlad-jit.cc  superpoint-jit.cc  superpoint-tensorrt.cc  superpoint.cc
xslam_visual_features/tests/: test-distances.cc  test-models.cc
xslam_visual_localization/: CMakeLists.txt  package.xml
xslam_visual_localization/include/xslam/visual-localization/: debug_visualize.h  endian.h  geo_observer.h  map-io.h  matching.h  optimization.h  relocalization.h  tracking.h  visual-localization.h  visualization.h
xslam_visual_localization/include/xslam/visual-localization/wavelet/: CWavelet.h
xslam_visual_localization/nodes/: evaluate_map.cc  filter_config.yaml  visual-localization-node.cc
xslam_visual_localization/src/: debug_visualize.cc  geo_observer.cc  map-io.cc  matching.cc  optimization.cc  relocalization.cc  tracking.cc  visual-localization.cc  visualization.cc
xslam_visual_localization/src/wavelet/: CWavelet.cc
xslam_visual_localization/tests/: test-feature-extraction.cc  test-map-loading.cc  test-relocalization.cc
xslam_visual_types/: CMakeLists.txt  package.xml
xslam_visual_types/include/xslam/visual-types/: frame-graph.h  keypoint-grid.h  keypoint.h  mappoint.h  tile.h  track.h  types.h  visual-frame.h  visual-keyframe.h  visual-map.h
xslam_visual_types/src/: frame-graph.cc  keypoint-grid.cc  mappoint.cc  tile.cc  visual-frame.cc  visual-map.cc
