<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
    <name>xslam_common</name>
    <version>0.0.0</version>
    <description>xslam_common</description>
    <maintainer email="hhuangat@connect.ust.hk">hyhuang</maintainer>
    <license>TBD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>eigen_catkin</depend>
    <depend>eigen_checks</depend>
    <depend>gflags_catkin</depend>
    <depend>glog_catkin</depend>
    <depend>fmt_catkin</depend>

    <depend>xslam_cv_common</depend>
    <!-- <depend>minkindr</depend> -->
    <!-- <depend>opencv3_catkin</depend> -->
    <!-- <depend>protobuf_catkin</depend> -->
    <!-- <depend>yaml_cpp_catkin</depend> -->
</package>
