<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
    <name>xslam_visual_types</name>
    <version>0.0.0</version>
    <description>visual types</description>
    <maintainer email="hhuangat@connect.ust.hk">hyhuang</maintainer>
    <license>TBD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>eigen_catkin</depend>
    <!-- <depend>eigen_checks</depend> -->
    <depend>gflags_catkin</depend>
    <depend>glog_catkin</depend>
    <!-- <depend>pcl_catkin</depend> -->
    <depend>cv_bridge</depend>

    <depend>xslam_cv_cameras</depend>
    <!-- <depend>vi_map</depend> -->

    <depend>xslam_common</depend>
    <depend>PCL</depend>
    <!-- <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_msgs</exec_depend>
    <exec_depend>pcl_ros</exec_depend> -->
    <!-- <depend>vi_map</depend> -->
    <!-- <depend>minkindr</depend> -->
    <!-- <depend>opencv3_catkin</depend> -->
    <!-- <depend>protobuf_catkin</depend> -->
    <!-- <depend>yaml_cpp_catkin</depend> -->
</package>